kubernetes/apps/observability/kromgo/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-envoy-from-network
  namespace: observability
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: network
  to:
    - group: ""
      kind: Service
      name: kromgo
